feat: adicionar suporte a autenticação com JWT e gerenciamento de usuários feat: criar tabelas de banco de dados para usuários, ativos e carteiras feat: implementar contexto de autenticação e armazenamento seguro de sessão feat: adicionar telas de login e registro com validação de autenticação feat: atualizar configuração do projeto para suporte a CORS e variáveis de ambiente test: criar testes para o serviço de geração e validação de tokens JWT chore: atualizar dependências e configurações do projeto